--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -129,15 +129,20 @@
             <h4 v-else>No image</h4>
           </div>
           <form class="mt-3" ref="imageForm" @submit.prevent @keyup.esc="cancel" v-if="isEditing">
-            <label class="custom-file">
-              <input type="file" class="custom-file-input" :disabled="isSaving" @change="updateImage">
-              <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
-            </label>
+            <div class="form-group">
+              <label class="custom-file">
+                <input type="file" class="custom-file-input" :disabled="isSaving" @change="updateImage">
+                <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
+              </label>
+            </div>
+            <div class="form-group" v-if="imageUrl">
+              <input type="text" class="form-control" readonly v-model="imageUrl">
+            </div>
             <button type="button"
                     class="btn btn-outline-danger mt-3"
                     :disabled="isSaving"
                     @click="removeImage"
-                    v-if="(edited.image || imageFile) && !imageRemoved">
+                    v-if="(edited.image || imageFile || imageUrl) && !imageRemoved">
               Delete image
             </button>
           </form>
@@ -146,12 +151,25 @@
           <form @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
             <div class="form-row">
               <div class="col-8 form-group">
-                <input type="text"
-                       class="form-control"
-                       placeholder="Title"
-                       required
-                       v-model="edited.title"
-                       v-focus>
+                <div class="dropdown">
+                  <input type="text"
+                        class="form-control"
+                        placeholder="Title"
+                        required
+                        v-model="edited.title"
+                        v-focus
+                        ref="titleInput"
+                        data-toggle="dropdown">
+                  <div class="dropdown-menu">
+                    <button type="button"
+                            class="dropdown-item"
+                            v-for="completion in completions"
+                            :key="completion.id"
+                            @click="selectCompletion(completion)">
+                      {{ completion.title }}
+                    </button>
+                  </div>
+                </div>
               </div>
               <div class="col-4 form-group">
                 <input type="number"
