--- a/src/public2/index.html
+++ b/src/public2/index.html
@@ -122,44 +122,50 @@
 
   <script type="text/x-template" id="game-item-template">
     <div class="card h-100">
-      <div class="row card-body">
-        <div class="col-4">
-          <div class="cover">
-            <img :src="game.image" class="rounded img-fluid" v-if="game.image">
-            <h4 v-else>No image</h4>
-          </div>
-          <form class="mt-3" ref="imageForm" @submit.prevent @keyup.esc="cancel" v-if="isEditing">
-            <div class="form-group">
+      <form class="card-body" @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
+        <div class="row">
+          <div class="col-4">
+            <div class="cover">
+              <img :src="edited.image" class="rounded img-fluid" v-if="edited.image && !imageRemoved">
+              <h4 v-else>No image</h4>
+            </div>
+            <div class="form-group mt-3">
               <label class="custom-file">
-                <input type="file" class="custom-file-input" :disabled="isSaving" @change="updateImage">
-                <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
+                <input type="file"
+                       class="custom-file-input"
+                       :disabled="isSaving"
+                       @change="updateImage"
+                       ref="imageInput">
+                <span class="custom-file-control">
+                  {{ imageFile && imageFile.name }}
+                </span>
               </label>
             </div>
             <div class="form-group" v-if="imageUrl">
               <input type="text" class="form-control" readonly v-model="imageUrl">
             </div>
-            <button type="button"
-                    class="btn btn-outline-danger mt-3"
-                    :disabled="isSaving"
-                    @click="removeImage"
-                    v-if="(edited.image || imageFile || imageUrl) && !imageRemoved">
-              Delete image
-            </button>
-          </form>
-        </div>
-        <div class="col-8">
-          <form @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
+            <div class="form-group">
+              <button type="button"
+                      class="btn btn-outline-danger"
+                      :disabled="isSaving"
+                      @click="removeImage"
+                      v-if="(edited.image || imageFile || imageUrl) && !imageRemoved">
+                Delete image
+              </button>
+            </div>
+          </div>
+          <div class="col-8">
             <div class="form-row">
               <div class="col-8 form-group">
                 <div class="dropdown">
                   <input type="text"
-                        class="form-control"
-                        placeholder="Title"
-                        required
-                        v-model="edited.title"
-                        v-focus
-                        ref="titleInput"
-                        data-toggle="dropdown">
+                         class="form-control"
+                         placeholder="Title"
+                         required
+                         v-model="edited.title"
+                         v-focus
+                         ref="titleInput"
+                         data-toggle="dropdown">
                   <div class="dropdown-menu">
                     <button type="button"
                             class="dropdown-item"
@@ -189,7 +195,9 @@
               <div class="col-4 form-group">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" v-model="edited.currently_playing">
+                    <input type="checkbox"
+                           class="form-check-input"
+                           v-model="edited.currently_playing">
                     Playing
                   </label>
                 </div>
@@ -231,12 +239,16 @@
             </div>
             <div class="form-row">
               <div class="col form-group">
-                <textarea rows="10"
+                <textarea rows="6"
                           class="form-control"
                           placeholder="Comment"
                           v-model="edited.comment"></textarea>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
             <div class="form-row">
               <div class="col form-group">
                 <h5>Platforms</h5>
@@ -264,8 +276,18 @@
                 Delete
               </button>
             </div>
-          </form>
-          <div class="h-100 d-flex flex-column justify-content-between" v-else>
+          </div>
+        </div>
+      </form>
+      <div class="row card-body" v-else>
+        <div class="col-4">
+          <div class="cover">
+            <img :src="game.image" class="rounded img-fluid" v-if="game.image">
+            <h4 v-else>No image</h4>
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="h-100 d-flex flex-column justify-content-between">
             <div>
               <h4>
                 <i class="fa fa-play-circle" v-if="game.currently_playing"></i>
@@ -285,7 +307,7 @@
                 <i class="fa fa-tag"></i> {{ tags }}
               </p>
             </div>
-            <div class="d-flex justify-content-between" v-if="isEditable">
+            <div class="text-right" v-if="isEditable">
               <button type="button" class="btn btn-outline-primary" @click="edit">
                 Edit
               </button>
