--- a/src/wwwroot/index.html
+++ b/src/wwwroot/index.html
@@ -434,13 +434,6 @@
     </form>
   </script>
 
-  <script src="js/api.js"></script>
-  <script src="js/focus.js"></script>
-  <script src="js/descriptor-list.js"></script>
-  <script src="js/game-item.js"></script>
-  <script src="js/descriptors-editor.js"></script>
-  <script src="js/system-settings.js"></script>
-  <script src="js/login-form.js"></script>
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
